<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="judul_filem">Judul Filem</string>
    <string name="descripsi_film">descripsi film</string>
    <string name="details">DETAILS</string>
    <string name="title">Title Film</string>
    <string-array name="director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Joe Russo</item>
        <item>Susanna Bier</item>
        <item>Anthony McCarten</item>
        <item>Travis Knight</item>
        <item>Ryan Coogler</item>
        <item>Tim Miller</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Rob Marshall</item>
        <item>Christian Rivers</item>
        <item>Aris Nugraha</item>
        <item>Otto Bathurst</item>
        <item>Rodney Rothman</item>
        <item>Fede Alvarez</item>
        <item>Clint Eastwood</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string name="name_director">Name Director</string>
    <string name="year">Year :</string>
    <string name="_2020">2020</string>
    <string name="description">Overview</string>
    <string name="tab_1">Movie</string>
    <string name="tab_2">Tv Show</string>
    <string-array name="title_film">
        <item>A Star is Born</item>
        <item>Aqua Man</item>
        <item>Avenger Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="title_tv_show">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
        <item>Marvel\'s Iron Fist</item>
        <item>Naruto Shippūden</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
        <item>The Umbrella Academy</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="desc_tv_show">
        <item>
            Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.
        </item>
        <item>
            The Doom Patrol\’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.
        </item>
        <item>
            Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Goku\'s home. Together, they set off to find all seven and to grant her wish.
        </item>
        <item>
            Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isn\'t just any ordinary kid, he\'s a member of one of the world\'s most infamous mage guilds: Fairy Tail.
        </item>
        <item>
            Sick, twisted, politically incorrect and Freakin\' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he\'s not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.
        </item>
        <item>
            After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion — and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become…The Flash.
        </item>
        <item>
            Everyone knows the name Commissioner Gordon. He is one of the crime world\'s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon\'s story and his rise from rookie detective to Police Commissioner\? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world\'s most iconic villains\? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker\?
        </item>
        <item>
            Follows the personal and professional lives of a group of doctors at Seattle\’s Grey Sloan Memorial Hospital.
        </item>
        <item>
            This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.
        </item>
        <item>
            Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.
        </item>
        <item>
            Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.
        </item>
        <item>
            From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.
        </item>
        <item>
            Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small-town life, the darkness and weirdness bubbling beneath Riverdale\’s wholesome facade.
        </item>
        <item>
            Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be… perhaps better off. When Frank\'s not at the bar spending what little money they have, he\'s passed out on the floor. But the kids have found ways to grow up in spite of him. They may not be like any family you know, but they make no apologies for being exactly who they are.
        </item>
        <item>
            Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.
        </item>
        <item>
            When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force. Subsequently, their father raised them to be soldiers. He taught them about the paranormal evil that lives in the dark corners and on the back roads of America … and he taught them how to kill it. Now, the Winchester brothers crisscross the country in their \'67 Chevy Impala, battling every kind of supernatural threat they encounter along the way.
        </item>
        <item>
            Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.
        </item>
        <item>
            A dysfunctional family of superheroes comes together to solve the mystery of their father\'s death, the threat of the apocalypse and more.
        </item>
        <item>
            Sheriff\'s deputy Rick Grimes awakens from a coma to find a post-apocalyptic world dominated by flesh-eating zombies. He sets out to find his family and encounters many other survivors along the way.
        </item>
    </string-array>
</resources>