<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/poster_spiderman"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDarkTrans"/>

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_return"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imgFilm"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/poster_spiderman"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_below="@id/imgFilm"
            android:background="#FFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_below="@id/titleFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#000"
                android:textSize="15sp"/>
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_below="@id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/labelDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/director"/>

                <TextView
                    android:id="@+id/director_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:text="@string/name_director"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/labelYears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/year"/>

                <TextView
                    android:id="@+id/years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:text="@string/_2020"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>